--- a/.github/workflows/sample.yaml
+++ b/.github/workflows/sample.yaml
@@ -9,7 +9,4 @@ jobs:
         - name: echo a string 
           run: echo "Hello World"
         - name: multiline script
-          run:  |
-            node -v 
-            npm -v
-  
+          run: "whoami"
