--- a/.github/workflows/sample.yaml
+++ b/.github/workflows/sample.yaml
@@ -9,4 +9,7 @@ jobs:
         - name: echo a string 
           run: echo "Hello World"
         - name: multiline script
-          run: "whoami"
+          run: 
+            whoami
+            node -v
+            npm -v
