--- a/.github/workflows/sample.yaml
+++ b/.github/workflows/sample.yaml
@@ -10,6 +10,6 @@ jobs:
           run: echo "Hello World"
         - name: multiline script
           run: 
-            whoami
-            node -v
-            npm -v
+           - whoami
+           - node -v
+           - npm -v
