--- a/.github/workflows/sample.yaml
+++ b/.github/workflows/sample.yaml
@@ -18,6 +18,7 @@ jobs:
 
   run-windows-build:
     runs-on: windows-latest
+    needs: ["run-shell-command"]
     steps:
       - run: choco install gh
       - run: gh version
